--- a/www/css/home.css
+++ b/www/css/home.css
@@ -1,28 +1,26 @@
-@media all and (min-width: 768px) {
+/*@media all and (min-width: 768px) {
   .fa {
     display: none;
   }
-}
+}*/
 
-.container {
-  width: 95%;
-}
-
-#my-projects {
-  margin: 60px auto;
-  border: 1px solid black;
-  height: 300px;
-  padding: 25px;
-}
-
-#other-projects {
-  margin: 90px auto;
-  border: 1px solid black;
-  height: 300px;
-}
-
-.project {
-  border: 1px solid red;
-  margin: 25px;
+.thumbnail {
   height: 200px;
+  min-width: 300px;
+  margin-bottom: 0px;
+}
+
+.row {
+  border: 1px solid black;
+  padding: 20px;
+  margin-top: 10px;
+  margin-bottom: 100px;
+}
+
+.col-lg-4, .col-sm-12, .col-xs-12 {
+  padding: 20px;
+}
+
+a {
+  color: black;
 }
