--- a/www/css/project.css
+++ b/www/css/project.css
@@ -9,9 +9,8 @@
     padding: 0px;
   }
   div.user-image {
-    margin: 5px;
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    /*width: 80px;*/
     background-image: url("http://cdn3.rd.io/user/no-user-image-square.jpg");
     background-position: center;
     background-size: cover;
@@ -25,5 +24,10 @@
 
   div.mission-info {
     background-color: #EEEEEE;
+  }
+
+  .modal-body {
+    max-height: 700px;
+    overflow-y:scroll;
   }
 }
