--- a/www/css/master.css
+++ b/www/css/master.css
@@ -1,6 +1,6 @@
 @orange: #FF6B3C;
 @dark-teal: #444C58;
-@teal: #26A599
+@teal: #26A599;
 @light-teal: #A5DAD4;
 @gray: #B4BBC3;
 @light-gray: #F2F4F5;
