--- a/www/css/master.css
+++ b/www/css/master.css
@@ -19,6 +19,10 @@
 
 @media all and (min-width: 768px) {
 
+  a, a:hover, a:active, a:visited {
+    text-decoration: none;
+  }
+
   body, p, li, ul, span {
     font-family: Helvetica, Arial, sans-serif;
   }
@@ -26,6 +30,27 @@
   span.new-h1, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Caviar_Dreams_Bold", Helvetica, Arial, sans-serif;
   }
+
+  /*Button style*/
+  button#button-strong {
+    background-color: #26A599;
+    color: #F2F4F5;
+  }
+
+  button#button-strong span a,
+  button#button-strong span a:active,
+  button#button-strong span a:visited {
+    background-color: transparent;
+    color: #F2F4F5;
+    text-decoration: none;
+  }
+  button#button-strong:hover,
+  button#button-strong span a:hover{
+    background-color: #218A80;
+    color: #F2F4F5;
+    text-decoration: none;
+  }
+
   /* Menu -------------------------------------*/
   .nav .fa {
     display: none;
