--- a/www/css/index.css
+++ b/www/css/index.css
@@ -2,19 +2,18 @@
   padding-top: 25%;
 }
 
+body {
+  height: 100%;
+  text-align: center;
+  font-family: 'Exo';
+}
+
 h1 {
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
                0px 4px 3px rgba(0, 0, 0, 0.1),
                0px 4px 3px rgba(0, 0, 0, 0.1);
-}
-
-body {
-  background: url(https://images.unsplash.com/photo-1413919873593-061d76ec8452?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=b7e70e9367631e78d2ed2c521b85e3a5);
-  background-size: cover;
-  background-position: center;
-  color: white;
-  height: 100%;
-  text-align: center;
+  font-family: 'Caviar Dreams';
+  font-weight: bold;
 }
 
 html {
