--- a/www/css/master.css
+++ b/www/css/master.css
@@ -22,6 +22,10 @@
     src: url(../fonts/ARIALUNI.TTF);
 }
 
+#orange {
+  color: #FF6B3C;
+}
+
 @media all and (min-width: 768px) {
 
   a, a:hover, a:active, a:visited {
@@ -30,13 +34,36 @@
 
   body, p, li, ul, span {
     font-family: "Arial-Unicode", Helvetica, Arial, sans-serif;
+    color: #444C58;
   }
 
   span.new-h1, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Caviar_Dreams_Bold", Helvetica, Arial, sans-serif;
+    color: #444C58;
   }
 
   /*Button style*/
+  a#button-strong {
+    background-color: #26A599;
+    color: #F2F4F5;
+  }
+
+  a#button-strong,
+  a#button-strong:active,
+  a#button-strong:visited {
+    background-color: #26A599;
+    color: #F2F4F5;
+    text-decoration: none;
+  }
+
+  a#button-strong:hover,
+  a#button-strong a:hover,
+  a#button-strong span a:hover {
+    background-color: #218A80;
+    color: #F2F4F5;
+    text-decoration: none;
+  }
+  /**/
   button#button-strong {
     background-color: #26A599;
     color: #F2F4F5;
