--- a/www/css/login.css
+++ b/www/css/login.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #F2F4F5;
   margin: 0 auto;
   text-align: center;
   color: RGBA(59, 59, 59, 0.81);
@@ -24,26 +25,23 @@ label {
 
 @media all and (min-width: 992px) {
   #box1 {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    border-left: 2px solid black;
+    background-color: #A5DAD4;
     height: 400px;
   }
 
   #box2 {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    border-right: 2px solid black;
+    background-color: #A5DAD4;
     height: 400px;
   }
 
   #box3 {
     height: 300px;
-    border-left: 2px solid black;
+    border-left: 2px solid #444C58;
+    background-color: #A5DAD4;
     margin-top: 50px;
   }
 
-  #box3 p {
+  #box3 h3 {
     padding-top: 22%;
   }
 }
