Login page title

--- a/www/css/login.css
+++ b/www/css/login.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F2F4F5;
+  /*background-color: #F2F4F5;*/
   margin: 0 auto;
   text-align: center;
   color: RGBA(59, 59, 59, 0.81);
