--- a/www/css/master.css
+++ b/www/css/master.css
@@ -123,6 +123,55 @@
 
 @media (max-width: 768px) {
 
+  /*Button*/
+
+    /*Button style*/
+    a#button-strong {
+      background-color: #26A599;
+      color: #F2F4F5;
+    }
+
+    a#button-strong,
+    a#button-strong:active,
+    a#button-strong:visited {
+      background-color: #26A599;
+      color: #F2F4F5;
+      text-decoration: none;
+    }
+
+    a#button-strong:hover,
+    a#button-strong a:hover,
+    a#button-strong span a:hover {
+      background-color: #218A80;
+      color: #F2F4F5;
+      text-decoration: none;
+    }
+    /**/
+    button#button-strong {
+      background-color: #26A599;
+      color: #F2F4F5;
+    }
+
+    button#button-strong a,
+    button#button-strong a:active,
+    button#button-strong a:visited,
+    button#button-strong span a,
+    button#button-strong span a:active,
+    button#button-strong span a:visited {
+      background-color: transparent;
+      color: #F2F4F5;
+      text-decoration: none;
+    }
+
+    button#button-strong:hover,
+    button#button-strong a:hover,
+    button#button-strong span a:hover {
+      background-color: #218A80;
+      color: #F2F4F5;
+      text-decoration: none;
+    }
+
+  /*Menu*/
   nav.navbar, nav.bar div.container-fluid {
     background-color: #444C58;
     color: #F2F4F5;
