--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -1,3 +1,30 @@
+h4.padd-left {
+  padding-left: 15px;
+}
+
+div.proj-card:hover {
+  background-color: #B4BBC3;
+}
+
+div.proj-cont {
+  margin-top: 20px;
+}
+
+.progress {
+  background-color: #A5DAD4;
+}
+
+.progress-bar {
+  background-color: #FF6B3C;
+}
+
+a, a:hover, a:active, a:visited {
+  color: #444C58;
+}
+
+hr {
+  color: #26A599;
+}
 @media all and (min-width: 768px) {
   .nav .fa {
     display: none;
@@ -25,18 +52,19 @@
 
 
 a {
-  color: black;
+  color: #444C58;
 }
 
 img {
-  border: 1px solid black;
+  border: 1px solid #444C58;
 }
 
 .box {
-  border: 1px solid black;
-  padding: 20px;
+  padding: 0px 20px;
+}
+
+.progress{
   margin-top: 10px;
-  margin-bottom: 20px;
 }
 
 .thumb-proj {
@@ -57,10 +85,6 @@ img {
   margin-bottom: 0px;
 }
 
-.box .col-lg-12 {
-  padding: 20px;
-}
-
 @media all and (max-width: 768px) {
   .btn-default {
     display: none;
@@ -69,8 +93,4 @@ img {
   #center {
     text-align: center;
   }
-}
-
-.box .col-lg-4, .box .col-md-6, .box .col-sm-12, .box .col-xs-12 {
-  padding: 20px;
 }
